# rp2040-freeRTOS-tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ProjectFiles/: CMakeLists.txt  main.c
freertos/: CMakeLists.txt  FreeRTOSConfig.h
